<resources>
    <string name="app_name">PGOwner</string>
    <!-- login page-->
    <string name="login">Login to your account</string>
    <string name="enter_name">Enter Name or Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="videos">Videos</string>
    <string name="news">News</string>
    <string name="matches">Matches</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_internet_connection">Network Unavailable</string>
    <string name="internet_check">Please verify your internet connectivity.</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="verify">Verify</string>
    <string name="time_remaining">Time Remaining :</string>
    <string name="_01_00">01:00</string>
    <string name="do_not_receive_OTP">Do not receive OTP?</string>
    <string name="resent_otp">Resend OTP</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="register">Register</string>
    <string name="conform_password">Conform Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_the_6_digits_code_sent_to_you_at_9999999999">Enter the 6 digits code sent to you at 9999999999</string>
    <string name="by_logging_in_you_agree_to_our_terms_amp_conditions"><![CDATA[By logging in, you agree to our Terms & Conditions]]></string>
    <string name="verify_otp">Verify OTP</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_otp">Send OTP</string>
    <string name="ground_address">Ground Address</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="_01_am_02_am">01 AM - 02 AM</string>
    <string name="price_per_hour">Price Per Hour(₹)</string>
    <string name="box_cricket_tennis_football_and_turff_cricket_court">box cricket, Tennis, Football and Turff Cricket Court</string>
    <string name="image">image</string>
    <string name="ground_name">Ground Name :</string>
    <string name="address">Address</string>
    <string name="sample_ground_name">Sample Ground Name</string>
    <string name="edit_ground_details">Edit Ground details</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="details">Details</string>
</resources>