<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardPreventCornerOverlap="true"
        tools:ignore="MissingConstraints">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">
            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.2"
                android:src="@drawable/back_icon"
                android:tint="@color/black"
                tools:ignore="ContentDescription,UseAppTint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4.8"
                android:layout_marginEnd="40dp"
                android:text="@string/back"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/register1"
        style="@style/MainHeadingTextStyle_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.222" />

    <!-- Login CardView -->


    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/SmallTextStyle_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/create_your_new_account"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/register1" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271">

        <!-- Email Label -->
        <!--            <TextView-->
        <!--                android:id="@+id/email"-->
        <!--                style="@style/NormalTextStyle_Green"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="16dp"-->
        <!--                android:text="@string/email"-->
        <!--                android:textAllCaps="true"-->
        <!--                tools:ignore="MissingConstraints" />-->

        <!-- Email EditText -->
        <EditText
            android:id="@+id/emailEt"
            style="@style/NormalTextStyle_Green"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edttext_bottom_line_grey"
            android:hint="Email"
            android:textColorHint="@color/text_green"
            android:padding="6dp"

            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <!-- Email Error -->
        <TextView
            android:id="@+id/emailErrorTV"
            style="@style/NormalTextStyle_Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"

            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:visibility="gone" />

        <!-- Password Label -->
        <!--            <TextView-->
        <!--                android:id="@+id/passwordTv"-->
        <!--                style="@style/NormalTextStyle_Green"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="16dp"-->
        <!--                android:text="@string/password"-->
        <!--                android:textAllCaps="true"-->
        <!--                tools:ignore="MissingConstraints" />-->

        <!-- Password EditText -->
        <EditText
            android:id="@+id/password_et"
            style="@style/NormalTextStyle_Green"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edttext_bottom_line_grey"
            android:hint="@string/enter_password"
            android:textColorHint="@color/text_green"
            android:inputType="textPassword"
            android:padding="6dp" />

        <!-- Password Error -->
        <TextView
            android:id="@+id/passwordErrorTV"
            style="@style/ErrorTextStyle_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:visibility="gone" />
        <EditText
            android:id="@+id/conform_password_et"
            style="@style/NormalTextStyle_Green"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edttext_bottom_line_grey"
            android:hint="@string/conform_password"
            android:textColorHint="@color/text_green"
            android:inputType="textPassword"
            android:padding="6dp" />
        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/NormalTextStyle_white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_effect"
            android:text="@string/register"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
